# sanic-session

./: .gitignore  .readthedocs.yml  .travis.yml  FLASK_LICENSE  LICENSE  Makefile  README.md  dev_requirements.txt  doc_requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: Makefile  index.rst  sanic_session.rst
docs/source/: api.rst  conf.py  configuration.rst  index.rst  testing.rst  using_the_interfaces.rst
example/: example.py
sanic_session/: __init__.py  aioredis.py  base.py  extension.py  in_memory_session_interface.py  memcache.py  memcache_session_interface.py  memory.py  mongodb.py  mongodb_session_interface.py  multimemory.py  redis.py  redis_session_interface.py  utils.py  zodb_session_interface.py
tests/: .test_redis_session_interface.py.swo  .test_redis_session_interface.py.swp  test_aioredis_session_interface.py  test_in_memory_session_interface.py  test_memcache_session_interface.py  test_redis_session_interface.py  test_utils.py  test_zodb_session_interface.py
