[build-system]
requires = ["setuptools<60.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py37','py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
src_paths = ["sanic_session", "tests"]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
